--- a/requirements.txt
+++ b/requirements.txt
@@ -298,7 +298,7 @@ typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.12.2
 tzdata==2025.2
-umap==0.1.1
+umap-learn==0.5.3
 unstructured==0.17.2
 unstructured-client==0.27.0
 uri-template==1.3.0
